samples/_failures_safe/1761298955_97c6f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0dfbfc9a.c: In function ‘main’:
./samples/SAFE/__tmp_0dfbfc9a.c:161: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_0dfbfc9a.c:160:17: error: expected declaration or statement at end of input
  160 |                 } else if
      |                 ^
./samples/SAFE/__tmp_0dfbfc9a.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0dfbfc9a.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0dfbfc9a.c:160:17: error: expected declaration or statement at end of input
